<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="cat_seguridad"
        android:title="Seguridad">
        <Preference
            android:key="conf_pin"
            android:summary="@string/preference_pin_summary"
            android:title="@string/preference_pin_title">
            <intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.globalpaysolutions.mrocket.ManejoPIN"
                android:targetPackage="com.globalpaysolutions.mrocket"/>
            <!--<intent
                android:action="android.intent.action.VIEW"
                android:targetClass="com.globalpaysolutions.yovendorecarga.Configuracion"
                android:targetPackage="com.globalpaysolutions.yovendorecarga">
                <extra
                    android:name="ConfFragment"
                    android:value="PIN"/>
            </intent>-->
        </Preference>
        <!--<Preference
            android:key="con_pass"
            android:summary="@string/preference_pass_summary"
            android:title="@string/preference_pass_title">

        </Preference>-->

    </PreferenceCategory>
    <PreferenceCategory
        android:key="cat_acerca"
        android:title="Acerca de">
        <Preference
            android:key="app_version"
            android:summary="@string/preference_version_number"
            android:title="@string/preference_version_text">
        </Preference>
        <Preference
            android:key="yvs_politicas"
            android:title="@string/preference_politics_title">
<!--            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://yovendorecarga.com/SV/home/terminos" />-->
        </Preference>

    </PreferenceCategory>
</PreferenceScreen>
