<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/Home"
            android:checked="false"
            android:icon="@drawable/icono_home"
            android:title="Inicio"/>
        <item
            android:id="@+id/Historial"
            android:checked="false"
            android:icon="@drawable/icono_historial"
            android:title="Historial de Ventas"/>
        <item
            android:id="@+id/SolicitarSaldo"
            android:checked="false"
            android:icon="@drawable/icono_solicitar_saldo"
            android:title="@string/drawer_balance_item"/>
        <item
            android:id="@+id/Alertas"
            android:checked="false"
            android:icon="@drawable/icono_notificaciones"
            android:title="Alertas y Notificaciones"/>

        <item
            android:id="@+id/Chat"
            android:checked="false"
            android:icon="@drawable/ic_livechat"
            android:title="Chat YVR - Soporte"/>

    </group>
    <group
        android:id="@+id/menu_conf"
        android:checkableBehavior="none">

        <item
            android:id="@+id/Perfil"
            android:checked="false"
            android:icon="@drawable/icono_perfil"
            android:title="@string/drawer_profile_item" />

        <item
            android:id="@+id/Conf"
            android:checked="false"
            android:icon="@drawable/icono_config"
            android:title="@string/drawer_configuracion" >
        </item>
    </group>
</menu>