<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.globalpaysolutions.yovendorecarga.SolicitarSaldo">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <!--TOOLBAR-->
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarSaldo"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ApplicationGreenTheme"
            android:elevation="4dp"
            app:popupTheme="@style/ThemeOverlay.AppCompat"
            app:theme="@style/ToolbarTheme"></android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/TextColor"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="@string/title_request_airtime"
                android:layout_gravity="center_horizontal"/>
            <TextView
                android:layout_marginTop="8dp"
                android:text="@string/content_request_airtime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </LinearLayout>


    <Button
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:id="@+id/btnSolicitarSaldo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="AskConfirmationDialog"
        android:layout_alignParentBottom="true"
        android:background="@drawable/btn_effect_ripple_green"
        android:clickable="true"
        android:text="@string/request_airtime"
        android:textColor="@color/ActivityWhiteBackground"/>

</RelativeLayout>
